--- a/democratos/CreateYourLaws/templates/base.html
+++ b/democratos/CreateYourLaws/templates/base.html
@@ -6,6 +6,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/myJS_CYL.js' %}"></script>
     {% block script %} {% endblock %}
      <title>{% block title %}{% endblock %}</title>
   </head>
