--- a/democratos/CreateYourLaws/templates/base_CYL.html
+++ b/democratos/CreateYourLaws/templates/base_CYL.html
@@ -6,7 +6,6 @@
 	<script type="text/javascript" src="{% static 'js/jstree.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
 	<link rel="stylesheet" type="text/css" href="{% static 'js/jquery-ui.min.css' %}"></link>
-	<script type="text/javascript" src="{% static 'js/myJS_CYL.js' %}"></script>
 	<style type="text/css" media="screen">
 		nav{display: inline-block;}	
 	</style>
@@ -22,7 +21,7 @@
 	 <section  id="intro">
 	   {% block intro %}{% endblock %}
 	 </section>
-	 <section id="content">
+	 <section id="content" class="UpSection">
 	   {% block content %}{% endblock %}
 	 </section>
 
