href for load New law props add, no ajax load for indatbox fixed, Jstree must be improvec, css must be improved for new law props has specific style

--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -99,10 +99,19 @@ td {
 
 section p {
 	text-align: left;
+	display: inline-block;
 }
 
 section ul {
+	width: 96%;
+    margin: 0px auto;
 	text-align: left;
+	position: relative;
+	display: block;
+}
+
+section ul div{
+	width: 100%;
 }
 
 table{
