commit in progress... test modif prop to continue

--- a/democratos/CreateYourLaws/templates/GetForm.html
+++ b/democratos/CreateYourLaws/templates/GetForm.html
@@ -31,6 +31,7 @@
     {% if IsModif %}
         <input type="hidden" name="IsModif" value="True">
         <input type="hidden" name="idform" value="{{idform}}">
+        <textarea type="visible" class="ToCkeditor" name="comments_com"></textarea>
     {% else %}
         <input type="hidden" name="IsModif" value="">
     {% endif%}
