--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -1,4 +1,3 @@
-
 html{
 	margin: 0;
     padding: 0;
@@ -279,6 +278,18 @@ button{
 	padding: 2%;
 }
 
+.lwp_text
+{
+	background: linear-gradient(130deg, #d6d5d4 30%, #b3d1ff 70%);
+	border-color: #4d94ff;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 10px;
+	display: inline-block;
+	margin: 0.2%;
+	padding: 2%;
+}
+
 
 .BoxIntroStyle
 {
@@ -314,7 +325,7 @@ section form{
 {	
 	background: linear-gradient(130deg, #d6d5d4 30%, #b3d1ff 70%);
 	border-width: 4px;
-	border-color: #4d94ff ; //linear-gradient(130deg, #909090 30%, #4d94ff 70%);
+	border-color: #4d94ff; //linear-gradient(130deg, #909090 30%, #4d94ff 70%);
 	border-style: solid;
 	border-radius: 8px;
 	margin: 1%;
@@ -479,7 +490,6 @@ section form{
 }
 .SmallMenu ul {
 	margin:0;
-	padding:0;
 	list-style-type:none;
 	text-align:left;
  }
@@ -487,7 +497,6 @@ section form{
 	float:left;
 	font-weight: bold;
 	margin:auto;
-	padding:0;
  }
 .SmallMenu li ins {
 	display:block;
@@ -519,4 +528,4 @@ section form{
 	border-radius: 2px;
 	background-color: grey;
 	box-shadow: 2px 2px 1px #aaa;
-}
+ }
