Ajax for commit up, need to work on frontend to display properly, still need to add CKeditor to comments field

--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -284,7 +284,7 @@
                                             {% else %}
                                             <li><ins class="ReportRef clickable " name="rpt:prp:{{x.id}}">Signaler</ins></li>
                                             {% endif %}
-                                            <li><ins class="ReportRef clickable " name="hst:prp:{{x.id}}">historique</ins></li>
+                                            <li><ins class="GetHistory clickable " name="hst:prp:{{x.id}}">historique</ins></li>
                                         </ul>
                                     </li>
                                 </ul> 
