Commit reco in progress

--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -47,6 +47,8 @@
         <h1>{{ref.law_code.title}}</h1> 
             <h2>{{ref.title}}</h2>
             <p>{{ref.text_law}}</p>
+            <br>
+            <ins class="GetHistory clickable " name="hst:law:{{ref.id}}">historique</ins>
 
     {% else %}
 
